# snake

./: .gitignore  :q  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: .main.rs.swo  .main.rs.swp  constants.rs  game_plugin.rs  lib.rs  main.rs  main_menu.rs
src/components/: apple.rs  mod.rs  snake_head.rs
src/entities/: .apple.rs.swo  .apple.rs.swp  .snake_segment.rs.swp  apple.rs  mod.rs  player.rs  snake_segment.rs
src/plugins/: main_menu.rs
src/systems/: .despawn_segments.rs.swp  .move_player.rs.swp  apple_collision.rs  despawn_segments.rs  game_over.rs  handle_input.rs  mod.rs  move_player.rs  score_system.rs  spawn_segments.rs  update_ui.rs
